KUSAapp/static/css/style.css
/********************* * GLOBAL * *********************/

/* All of the common stuff goes here under the appropriate sub headings */

/* Heading formatting */
body {
	margin: 0;
	font-family: 'Lato', sans-serif;
}

/* Text formatting */
h1 {
	font-family: 'Oswald', sans-serif;
	padding-bottom:2px;
	font-size:50px;
	display:inline-block;
}
h4 {
	font-size:14px;
}
h5 {
	font-weight: bolder;
	font-size:16px;
}
p {
	font-size:25px;
}
/* Form formatting */

/* Table formatting */

/* etc */


/********************* * LAYOUT * *********************/

/* All the layout things go here under sub-headings */

/* Container */
#container {
	margin: 	0 auto;
	text-align: center;
}
.narrower-container {
	width: 	950px;
	height:	100%;
	margin: 0 auto;
}
.section-container {
	padding-top:10px;
}
.section-content {
	padding-top:20px;	
	clear:both;
}


/* Header */
#header {
	height:300px;
	/*background-image:url("../images/halftone.png");*/
}

#topbar {
	height:			  40px;	
	background-image: url("../images/grey_wash_wall.png");
}
#topbar p {
	padding-top: 6px;
	font-size: 18px;
	color: #B7B7B7;
}
#desc {
	float: left;
}
#email {
	float: right;
}

#logo {
	height:			70%;
	padding-top:	20px;
	padding-bottom: 20px;
}
#logo img {
	height:  100%;
	width: 	 480px;
	display: block;
	margin:  0 auto;
}
#navbar {
	height:		      50px;
	width:			  100%;
	border-top:       1px solid #EAEAEA;
	/*border-bottom:    1px solid #EAEAEA;*/
	background-image:url("../images/greyzz.png");
	z-index: 		  10;
}
#nav-list {
	width:		100%;
	height:		100%;
	margin-top:	8px;
	padding:	0;
	text-align: center;
	font-weight:bold;
}
#nav-list li {
	display:   inline-block;
	width: 	   150px;
	font-size: 21px;
	margin: 0 10px;
}
#nav-list a {
	text-decoration: none;
	color:#6D6D6D;
}
#nav-list a:hover {
	color:#A7A7A7;
}
.fixed {
	position: fixed;
	width:	  100%;
	top:	  0;
}


/*** maininfo ***/
#maininfo {
	margin: 0 auto;
}

/* carousel */
#carousel {
	background-image:url("../images/nasty_fabric.png");
	height:			  560px;
}
#carousel-and-nav {
	height:  500px;
	width:	 100%;	
	/*padding: 40px 48px 10px 48px;*/
}
.jcarousel {
    position: relative;
    overflow: hidden;
    /*width:	  750px;
    height:   420px;*/
    width:100%;
    height:560px;
    margin:	  0 auto;
    /*border:   5px solid grey;*/
}
.jcarousel ul {
    width: 	  20000em;
    position: relative;

    /* Optional, required in this case since it's a <ul> element */
    list-style: none;
    margin: 	0;
    padding: 	0;
}
.jcarousel li {
    /* Required only for block elements like <li>'s */
    float: left;
    width:1296px;
    color:white;
}
.jcarousel img {
	width:100%;
	height:100%;
	opacity:0.85;
}
.carousel-title {
	position: absolute;
	font-size: 100px;
}
.carousel-desc {
	position: absolute;
}
.carousel-desc p { 
	font-size: 20px;
}
	#explore-title {
		left:100px;
		top:60px;
	}
	#explore-desc {
		left:400px;
		top:95px;
	}
	#explore-desc p {
		float:left;
		margin:0;
		clear:both;
	}
	#learn-title {
		top:380px;
	}
	#learn-desc {
		top:415px;
	}
	#learn-desc p {
		float:left;
		margin:0;
		clear:both;
	}
	#connect-title {
		top:60px;
	}
	#connect-desc {
		top:95px;
	}
	#connect-desc p {
		float:left;
		margin:0;
		clear:both;
	}


#learn {
	left:1510px;
}
#connect {
	left:2250px;
}
.jcarousel img:hover {

}

#pagination {
	height: 40px;
	width:  100%;
}
.jcarousel-pagination {
	width:  76px;
	height: 100px;
	margin: 0 auto;
}
.jcarousel-pagination a {
	text-decoration: none;
}
.jcarousel-pagination img {
	padding: 10px 3px;
	width:   15px;
	height:  15px;
}
.arrow {
	margin-top: 235px;
	padding:	7px;
	height: 	40px;
	width: 		40px;
	float:		left;
}
.arrow:hover {
	opacity: 0.5;
}


#about {
	background-image: url("../images/grey_wash_wall.png");
	height: 		  510px;
	/*	*/
}
#about h1 {
	border-bottom: 3px solid #B4B4B4;
}
#about p {
	text-align: left;
	font-size: 20px;
	color:white;
}
#about-list {
	width:22%;
	display:inline-block;
	float:left;
	border-right: 1px solid #EAEAEA;
	padding-right:30px;
}
#about-content {
	width:74%;
	padding-left:30px;
	display:inline-block;
}
#about .about-sub-title {
	margin:20px;
	display:inline-block;
	font-size: 20px;
	font-weight: bold;
	width:150px; 
	height:150px; 
	background-color:blue
}
#about .about-sub-desc {
	text-align: left;
}
#white-rectangle {
	position:absolute;
	margin:0 auto;
	margin-top:60px;
	clear:both;
	width:40px;
	background-color: #EAEAEA;
	height:5px;
}

.fancybox-title-over-wrap {
    width: 100%;
    opacity: 0.7;
    padding: 5px;
}


#exec {
	height: 570px;
	margin: 0 auto;	
}
#exec h1 {
	border-bottom: 4px solid #B4B4B4;
}
#exec p {
	margin: 0 auto;
}
#exec img {
	width:96px; 
	height:128px;
}
#exec-tabs {
  	position:   relative;   
	min-height: 300px; /* This part sucks */
	clear: 		both;
	margin: 	25px 0;
}
#exec-content {
	background-color: white;
}
#exec-content table {
	margin-left:20px;
	margin-bottom:30px;
}
#exec-content table td {
	padding-left:20px;
}
#exec-content table th {
	padding-left:20px;
}
#photos {
	/*background-color:#D9E0FF;*/
	background-image: url("../images/polaroid.png");
	height: 400px;
	/*border-top: 1px solid #D9E0FF;*/
	margin: 0 auto;	
}

#photos h1 {
	border-bottom: 4px solid #B4B4B4;
}
#photos p {
	text-align: left;
}
#photos .photos-sub-title {
	margin:20px;
	display:inline-block;
}
#photos .photos-sub-title img {
	width:150px; 
	height:150px;
	border: 5px solid #C5C5C5;
}
#photos a {
	text-decoration: none;
}

.gallery { 
	width: 800px;
	height: 450px;
	background: #000;
	clear:both;
	margin:auto;
}

#calendar {
	/*background-color:#C7C7C7;*/
	height: 700px;
	margin: 0 auto;	
}

#calendar h1 {
	border-bottom: 4px solid #B4B4B4;
}
#calendar p {
	text-align: left;
}
#calendar iframe {
	width:90%;
	height:70%;
}


#contact {
	/*background-color:#FFFFFF;*/
	height: 550px;
	border-top: 1px solid #D9E0FF;
	margin: 0 auto;	
}

#contact h1 {
	border-bottom: 4px solid #B4B4B4;
}
#contact p {
	text-align: left;

}
form p {
	font-size:15px;
}

/* Footer */
#footer {
	height:120px;
	width:100%;
	background-image: url("../images/grey_wash_wall.png");
}
#footer-desc {
	float:left;
	color:lightgrey;
	display:inline-block;
}
#toTop {
	margin-top:30px;
	height: 20px;
	width: 20px;
	float:right;
	display:inline-block;
}
/********************* * NAVIGATION * *********************/

/* I put navigation separate to the layout as there can be a number of navigation points under their sub-headings */

/* Main (horizontal) Navigation */

/* Left Navigation */

/* Right Navigation */

/* Breadcrumb Navigation */

/********************* * FORMS * *********************/

/* Any form formatting that varies from the common formatting, if there are multiple differently formatted forms, then use sub-headings */

/********************* * TABLES * *********************/

/* Same deal as forms */

/********************* * LISTS * *********************/

/* Same deal as forms and tables */

/********************* * CONTENT * *********************/

/* Any specific formatting for particular pages, grouped by sub-headings for the page the same way as forms, tables and lists */

/********************* * CSS SUPPORT * *********************/






/* Exec */

